--- a/book.html
+++ b/book.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="http://localhost:5050/book/" method="POST" enctype="multipart/form-data">
-        <!-- <input type="hidden" name="_method" value="PUT" hidden> -->
+        <input type="hidden" name="_method" value="PUT" hidden>
         <input type="text" name="title" id="">
         <input type="text" name="description" id="">
         <input type="text" name="categoryId" id="">
